add cache manager configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
     "noFallthroughCasesInSwitch": false,
     "resolveJsonModule": true,
     "paths": {
-
-    }
-  }
+      "@aggregator/cache-manager": ["libs/cache-manager/src"],
+      "@aggregator/cache-manager/*": ["libs/cache-manager/src/*"],
+      "@aggregator/unique-id-generator": ["libs/unique-id-generator/src"],
+      "@aggregator/unique-id-generator/*": ["libs/unique-id-generator/src/*"],
+    },
+  },
 }
