--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REDIS_URL=rediss://default:db3d5071bfa042508d2600821c076004@eu1-willing-sculpin-38781.upstash.io:38781
 APP_NAME='AGGREGATOR'
 APP_ENV='dev'
+AWS_REGION=x
+DYNAMODB_ENDPOINT=http://localhost:8000
