--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "aws-sdk": "^2.1540.0",
+    "axios": "^1.6.5",
     "ioredis": "^5.3.2",
     "nest-aws-sdk": "^3.0.1",
     "redis": "^4.6.12",
