Add sns manager library

--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
       "^@aggregator/logger(|/.*)$": "<rootDir>/libs/logger/src/$1",
       "^@aggregator/db-manager(|/.*)$": "<rootDir>/libs/db-manager/src/$1",
       "^@aggregator/common-types(|/.*)$": "<rootDir>/libs/common-types/src/$1",
-      "^@aggregator/sqs-manager(|/.*)$": "<rootDir>/libs/sqs-manager/src/$1"
+      "^@aggregator/sqs-manager(|/.*)$": "<rootDir>/libs/sqs-manager/src/$1",
+      "^@aggregator/sns-manager(|/.*)$": "<rootDir>/libs/sns-manager/src/$1"
     }
   }
 }
