--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
       "^@aggregator/db-manager(|/.*)$": "<rootDir>/libs/db-manager/src/$1",
       "^@aggregator/common-types(|/.*)$": "<rootDir>/libs/common-types/src/$1",
       "^@aggregator/sqs-manager(|/.*)$": "<rootDir>/libs/sqs-manager/src/$1",
-      "^@aggregator/sns-manager(|/.*)$": "<rootDir>/libs/sns-manager/src/$1"
+      "^@aggregator/sns-manager(|/.*)$": "<rootDir>/libs/sns-manager/src/$1",
+      "^@aggregator/events(|/.*)$": "<rootDir>/libs/events/src/$1"
     }
   }
 }
