add docker configuration and aws localstack

--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ REDIS_URL=rediss://default:db3d5071bfa042508d2600821c076004@eu1-willing-sculpin-
 APP_NAME='AGGREGATOR'
 APP_ENV='dev'
 AWS_REGION=x
+SNS_ENDPOINT=http://localstack:4566
 DYNAMODB_ENDPOINT=http://localhost:8000
+EVENT_BUS_SNS=arn:aws:sns:eu-central-1:000000000000:api_event_bus_local
