--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,19 @@
 /dist
 /node_modules
 /db/generated
+/client/node_modules
+
+/client/coverage
+
+# production
+/client/build
+
+# misc
+/client/.DS_Store
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
 
 # Logs
 logs
