fixed event propagation

--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
       "^@aggregator/common-types(|/.*)$": "<rootDir>/libs/common-types/src/$1",
       "^@aggregator/sqs-manager(|/.*)$": "<rootDir>/libs/sqs-manager/src/$1",
       "^@aggregator/sns-manager(|/.*)$": "<rootDir>/libs/sns-manager/src/$1",
-      "^@aggregator/events(|/.*)$": "<rootDir>/libs/events/src/$1"
+      "^@aggregator/events(|/.*)$": "<rootDir>/libs/events/src/$1",
+      "^@aggregator/sse-manager(|/.*)$": "<rootDir>/libs/sse-manager/src/$1"
     }
   }
 }
