--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 REDIS_URL=rediss://default:db3d5071bfa042508d2600821c076004@eu1-willing-sculpin-38781.upstash.io:38781
 APP_NAME='AGGREGATOR'
 APP_ENV='dev'
-AWS_REGION=eu-central-1
+AWS_REGION=us-east-1
 SNS_ENDPOINT=http://localstack:4566
 DYNAMODB_ENDPOINT=http://localstack:4566
-EVENT_BUS_SNS=arn:aws:sns:eu-central-1:000000000000:api_event_bus_local
+EVENT_BUS_SNS=arn:aws:sns:us-east-1:000000000000:api_event_bus_local
 REQUEST_HANDLER_SQS=http://localhost:4566/000000000000/api_aggregator_request_handler_local
 BROADCASTER_LISTENER_SQS=http://localhost:4566/000000000000/api_aggregator_broadcaster_local
 EXTERNAL_API_LISTENER_SQS=http://localhost:4566/000000000000/api_aggregator_external_api_handler_local
