--- a/.env_sample
+++ b/.env_sample
@@ -5,7 +5,7 @@ AWS_REGION=us-east-1
 SNS_ENDPOINT=http://localstack:4566
 DYNAMODB_ENDPOINT=http://localstack:4566
 EVENT_BUS_SNS=arn:aws:sns:us-east-1:000000000000:api_event_bus_local
-REQUEST_HANDLER_SQS=http://localhost:4566/000000000000/api_aggregator_request_handler_local
-BROADCASTER_LISTENER_SQS=http://localhost:4566/000000000000/api_aggregator_broadcaster_local
-EXTERNAL_API_LISTENER_SQS=http://localhost:4566/000000000000/api_aggregator_external_api_handler_local
-AGGREGATOR_CORE_LISTENER_SQS=http://localhost:4566/000000000000/api_aggregator_core_local
+REQUEST_HANDLER_SQS=http://localstack:4566/000000000000/api_aggregator_request_handler_local
+BROADCASTER_LISTENER_SQS=http://localstack:4566/000000000000/api_aggregator_broadcaster_local
+EXTERNAL_API_LISTENER_SQS=http://localstack:4566/000000000000/api_aggregator_external_api_handler_local
+AGGREGATOR_CORE_LISTENER_SQS=http://localstack:4566/000000000000/api_aggregator_core_local
