--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,18 @@
 version: '3.8'
 services:
   localstack:
-    image: localstack/localstack:0.13.3
+    image: localstack/localstack:latest
     ports:
-      - "127.0.0.1:4510-4530:4510-4530"
-      - "127.0.0.1:4566:4566"
+      - "127.0.0.1:4566:4566"            # LocalStack Gateway
+      - "127.0.0.1:4510-4559:4510-4559"  # external services port range
       - "127.0.0.1:4571:4571"
     environment:
       - SERVICES=sns,sqs,dynamodb
       - DOCKER_HOST=unix:///var/run/docker.sock
-      - DEFAULT_REGION=us-east-1
+      - DEBUG=1
     volumes:
-      - ~/tmp/localstack:/tmp/localstack
-      - /var/run/docker.sock:/var/run/docker.sock
+      - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - api-aggregator
   localstack-setup:
