--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 REDIS_URL=rediss://default:db3d5071bfa042508d2600821c076004@eu1-willing-sculpin-38781.upstash.io:38781
+RAPID_API_HOST_NBA=free-nba.p.rapidapi.com
+RAPID_API_HOST_WEATHER=visual-crossing-weather.p.rapidapi.com
 APP_NAME='AGGREGATOR'
 APP_ENV='dev'
 AWS_REGION=us-east-1
@@ -9,3 +11,4 @@ REQUEST_HANDLER_SQS=http://localstack:4566/000000000000/api_aggregator_request_h
 BROADCASTER_LISTENER_SQS=http://localstack:4566/000000000000/api_aggregator_broadcaster_local
 EXTERNAL_API_LISTENER_SQS=http://localstack:4566/000000000000/api_aggregator_external_api_handler_local
 AGGREGATOR_CORE_LISTENER_SQS=http://localstack:4566/000000000000/api_aggregator_core_local
+X-RapidAPI-Key=991468d2ebmsh8f4747e1ecb978dp1c7834jsn7c6fdac045cc
