--- a/.env_sample
+++ b/.env_sample
@@ -9,3 +9,6 @@ REQUEST_HANDLER_SQS=http://localstack:4566/000000000000/api_aggregator_request_h
 BROADCASTER_LISTENER_SQS=http://localstack:4566/000000000000/api_aggregator_broadcaster_local
 EXTERNAL_API_LISTENER_SQS=http://localstack:4566/000000000000/api_aggregator_external_api_handler_local
 AGGREGATOR_CORE_LISTENER_SQS=http://localstack:4566/000000000000/api_aggregator_core_local
+RAPID_API_HOST_NBA=https://free-nba.p.rapidapi.com
+RAPID_API_HOST_WEATHER=https://ai-weather-by-meteosource.p.rapidapi.com
+X-RapidAPI-Key=991468d2ebmsh8f4747e1ecb978dp1c7834jsn7c6fdac045cc
