fix request types

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,7 +19,7 @@ server {
     }
 
     location /api {
-        proxy_pass http://request-handler:6010;
+        proxy_pass http://request-handler;
         rewrite ^/api/(.*) /$1 break;
     }
 }
